# HumanGL

./: CMakeLists.txt  README.md
include/: Animator.h  GLFWEngine.h  GLRender.h  IComponent.h  IMonoBehavior.h  Renderer.h  Transform.h  matrix.hpp  vector.hpp
src/: Animator.cpp  GLFWEngine.cpp  GLRender.cpp  Renderer.cpp  Transform.cpp  main.cpp
